--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux-actions": "^0.10.1",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^3.3.2",
     "redux-thunk": "^2.1.0"
   }
 }
