--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "lodash": "^4.14.1",
     "md5": "^2.1.0",
+    "moment": "^2.14.1",
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-redux": "^4.4.5",
