--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
     "redux-promise-middleware": "^3.3.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "eslint": "^2.13.1",
+    "babel-eslint": "^6.0.0",
+    "eslint-config-airbnb": "^9.0.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-babel": "^3.0.0",
+    "eslint-plugin-import": "^1.0.0",
+    "eslint-plugin-jsx-a11y": "^1.0.2",
+    "eslint-plugin-react": "^5.0.0",
+    "eslint-plugin-react-native": "^1.0.0"
   }
 }
